# instrument_analysis

./: .gitignore  .travis.yml
CodeCalibrationReportLM/: FlatfieldTempDependance.py  LimbImageAnalysis_100um.py  LimbImageQualityComparisonAllTimes.py  LimbImageQualityComparisonAllTimesAllChannels.py  LimbImageQualityComparisonAllTimesAllChannels90deg.py  LimbImageQualityComparisonCoolTest.py  MATS_python_datachain.py  PoiningAnalysis.py  ScreenSetupSensitivity.py  alignment_with_laser_tests.py  bad_column_compensation.py  cali_ReadJorgsFiles.py  flatfield_comparison_baffel__new_batteriespnm.py  flatfield_comparison_baffel_pnm.py  flatfield_comparison_baffel_weigtingdown_pnm.py  flatfield_comparison_pnm.py  flatfield_comparison_pnm_april2029.py  flatfield_shape_pnm  flatfield_shape_pnm.py  forward_model.py  laser_baffle_straylight_test_pnm.py  lego_baffle_straylight_test_pnm.py  (+14 more)
UtilityFunctions/: README.md  setup.cfg
UtilityFunctions/src/geolocation/: satellite.py
UtilityFunctions/src/imagetools/: imagetools.py
UtilityFunctions/src/mats_utility.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
UtilityFunctions/src/plotting/: animate.py  plotCCD.py  plotting_functions.py  sort_images.py
UtilityFunctions/src/rawdata/: time_tools.py  timeline_tools.py
UtilityFunctions/src/retrieval/: apply_avks.py  averaging_kernels.py  merge_data.py  read_time.py
UtilityFunctions/src/retrieval/logs/: profile.txt  time.txt
UtilityFunctions/src/selection_tools/: itemselect.py
UtilityFunctions/tests/: test_averaging_kernels.py  test_geolocation.py  test_raw_data.py
(+287 files in other folders)
