[metadata]
name = mats_utility
version = 0.0.2
author = Ole Martin Christensen
author_email = olemartin.christensen@misu.su.se
description = Package for utility functions for MATS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/innosat-mats/instrument_analysis
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    ephem
    numpy
    xarray
    joblib
    skyfield
    plotly
    moviepy
    cartopy
    imageio

[options.packages.find]
where = src

